homepage content - expertise

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -123,120 +123,67 @@
     <div class="container py-16 md:py-20" id="services">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            Here's what I'm good at</h2>
+            Expertise</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            These are the services Ioffer</h3>
+            Over a Decade of Mastery in Creative & Technical Disciplines</h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
             <div class="shadow px-8 py-12 hover:bg-primary group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-development-white.svg", alt: "development icon" %>
+                        <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert" %>
                     </div>
                     <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-development-black.svg", alt: "development icon" %>
+                        <%= image_pack_tag "home/icon-software-development.svg", alt: "development icon", class: "invert-0" %>
                     </div>
                 </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        WEB DEVELOPMENT</h3>
+                        Software Engineering</h3>
                     <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
-                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
-                    <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-content-white.svg", alt: "content marketing icon" %>
-                    </div>
-                    <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-content-black.svg", alt: "content marketing icon" %>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <h3
-                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        Technical Writing</h3>
-                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
-                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
-                    <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-mobile-white.svg", alt: "Mobile Application icon" %>
-                    </div>
-                    <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-mobile-black.svg", alt: "Mobile Application icon" %>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <h3
-                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        Mobile Development</h3>
-                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
-                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
-                    <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-email-white.svg", alt: "Email Marketing icon" %>
-                    </div>
-                    <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-email-black.svg", alt: "Email Marketing icon" %>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <h3
-                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        Email Development</h3>
-                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
-                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
-                    <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-design-white.svg", alt: "Theme Design icon" %>
-                    </div>
-                    <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-design-black.svg", alt: "Theme Design icon" %>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <h3
-                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        Graphic Design</h3>
-                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
-                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
-                    <div class="hidden group-hover:block">
-                        <%= image_pack_tag "icon-graphics-white.svg", alt: "Graphic Design icon" %>
-                    </div>
-                    <div class="block group-hover:hidden">
-                        <%= image_pack_tag "icon-graphics-black.svg", alt: "Graphic Design icon" %>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <h3
-                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        Web Design</h3>
-                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Frontend & Backend Development using Microservices.
                     </p>
                 </div>
             </div>
 
+            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
+                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
+                    <div class="hidden group-hover:block">
+                        <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert" %>
+                    </div>
+                    <div class="block group-hover:hidden">
+                        <%= image_pack_tag "home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert-0" %>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <h3
+                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
+                        iOS Game Developemnt</h3>
+                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
+                        2D Arcade Style Games built with SpriteKit.
+                    </p>
+                </div>
+            </div>
+
+            <div class="shadow px-8 py-12 hover:bg-primary group rounded">
+                <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
+                    <div class="hidden group-hover:block">
+                        <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert" %>
+                    </div>
+                    <div class="block group-hover:hidden">
+                        <%= image_pack_tag "home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert-0" %>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <h3
+                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
+                        Film & Photography</h3>
+                    <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
+                        Product Photography, Advertisement Spots, and Short Films.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -500,7 +447,7 @@
 
     <% # map %>
     <div class="bg-center bg-cover bg-no-repeat h-72 sm:h-64 md:h-72 lg:h-96"
-        style="background-image: url(<%= asset_pack_path("media/images/map.jpg") %>);"></div>
+        style="background-image: url(<%= asset_pack_path("media/images/home/map.jpg") %>);"></div>
 
     <% # newsletter %>
     <div class="bg-center bg-cover bg-no-repeat relative py-16 lg:py-24 bg-primary bg-blend-multiply"
