--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <% # services %>
+    <% # expertise %>
     <div class="container py-16 md:py-20" id="services">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
@@ -127,7 +127,7 @@
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Over a Decade of Mastery in Creative & Technical Disciplines</h3>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
+        <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
             <div class="shadow px-8 py-12 hover:bg-primary group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
@@ -159,7 +159,7 @@
                 <div class="text-center">
                     <h3
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        iOS Game Developemnt</h3>
+                        iOS Game Development</h3>
                     <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
                         2D Arcade Style Games built with SpriteKit.
                     </p>
@@ -188,7 +188,7 @@
     </div>
 
     <% # portfolio %>
-    <div class="container py-16 md:py-20" id="portfolio">
+    <div class="bg-grey-50 container py-16 md:py-20" id="portfolio">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Check out my Portfolio</h2>
@@ -211,39 +211,8 @@
         </div>
     </div>
 
-    <% # clients %>
-    <div class="bg-grey-50" id="clients">
-        <div class="container py-16 md:py-20">
-            <div class="w-full sm:w-3/4 lg:w-full mx-auto">
-                <h2
-                    class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-                    My latest clients</h2>
-                <div class="flex flex-wrap items-center justify-center pt-4 sm:pt-4">
-                    <span class="block m-8">
-                        <%= image_pack_tag "logo-coca-cola.svg", alt: "client logo", class: "mx-auto block h-12 w-auto" %>
-                    </span>
-                    <span class="block m-8">
-                        <%= image_pack_tag "logo-apple.svg", alt: "client logo", class: "mx-auto block h-12 w-auto" %>
-                    </span>
-
-                    <span class="block m-8">
-                        <%= image_pack_tag "logo-netflix.svg", alt: "client logo", class: "mx-auto block h-12 w-auto" %>
-                    </span>
-
-                    <span class="block m-8">
-                        <%= image_pack_tag "logo-amazon.svg", alt: "client logo", class: "mx-auto block h-12 w-auto" %>
-                    </span>
-
-                    <span class="block m-8">
-                        <%= image_pack_tag "logo-stripe.svg", alt: "client logo", class: "mx-auto block h-12 w-auto" %>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <% # work %>
-    <div class="container py-16 md:py-20" id="work">
+    <div class="bg-grey-50 container py-16 md:py-20" id="work">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             My work experience</h2>
