--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,16 +18,15 @@ this.triggerNavItem(id)
 
             <div class="hidden lg:block">
                 <ul class="flex items-center">
+                    <%= desktop_navigation_link(name: "home", path: root_path) %>
                     <%= desktop_navigation_link(name: "photography", path: photography_path) %>
                     <%= desktop_navigation_link(name: "blog",        path: blog_posts_path) %>
 
                     <%= scrolling_desktop_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "services",   path: "#services",   request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "portfolio",  path: "#portfolio",  request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "clients",    path: "#clients",    request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "statistics", path: "#statistics", request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "blog",       path: "#blog",       request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "latest",       path: "#blog",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
                 </ul>
             </div>
@@ -50,16 +49,15 @@ this.triggerNavItem(id)
             </button>
 
             <ul class="flex flex-col mt-8">
-                <%= mobile_navigation_link name: 'photography', path: photography_path %>
+                <%= mobile_navigation_link(name: 'home', path: root_path) %>
+                <%= mobile_navigation_link(name: 'photography', path: photography_path) %>
                 <%= mobile_navigation_link(name: "blog",        path: blog_posts_path) %>
 
                 <%= scrolling_mobile_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "services",   path: "#services",   request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "portfolio",  path: "#portfolio",  request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "clients",    path: "#clients",    request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "statistics", path: "#statistics", request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "blog",       path: "#blog",       request_path: request.path) %>
+                <%= scrolling_mobile_navigation_link(name: "latest",       path: "#blog",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
             </ul>
         </div>
