--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,10 +23,10 @@ this.triggerNavItem(id)
                     <%= desktop_navigation_link(name: "blog",        path: blog_posts_path) %>
 
                     <%= scrolling_desktop_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "portfolio",  path: "#portfolio",  request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "statistics", path: "#statistics", request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "latest",       path: "#blog",       request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "latest",     path: "#blog",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
                 </ul>
             </div>
@@ -54,10 +54,10 @@ this.triggerNavItem(id)
                 <%= mobile_navigation_link(name: "blog",        path: blog_posts_path) %>
 
                 <%= scrolling_mobile_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "portfolio",  path: "#portfolio",  request_path: request.path) %>
+                <%= scrolling_mobile_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "statistics", path: "#statistics", request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "latest",       path: "#blog",       request_path: request.path) %>
+                <%= scrolling_mobile_navigation_link(name: "latest",     path: "#blog",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
             </ul>
         </div>
