radler designs logo; ios normal-case

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -97,7 +97,7 @@
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bx-mobile text-5xl text-primary mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black uppercase">
-                            <%= "iOS / " %>
+                            <span class="normal-case"><%= "iOS / " %></span>
                             <span class="text-primary font-black">
                                 Swift & Spritekit
                             </span>
@@ -159,7 +159,7 @@
                 <div class="text-center">
                     <h3
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
-                        iOS Game Development</h3>
+                        <span class="normal-case">iOS</span> Game Development</h3>
                     <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
                         2D Arcade Style Games built with SpriteKit.
                     </p>
@@ -191,7 +191,7 @@
     <div class="bg-grey-50 container py-16 md:py-20" id="games">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            iOS Games</h2>
+            <span class="normal-case">iOS</span> Games</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Here are games I created which are available to play in the Apple App Store</h3>
 
