--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,8 +11,8 @@ this.triggerNavItem(id)
     <div class="w-full z-50 top-0 py-3 sm:py-5 <%= @navigation_class %> ">
         <div class="container flex justify-between items-center">
             <div>
-                <a href="/">
-                    <%= image_pack_tag "logo.svg", class: "w-24 lg:w-48", alt: "logo image" %>
+                <a href="/" class="uppercase text-white text-xl sm:text-2xl lg:text-4xl">
+                    <span class="font-black">Radler</span> <span class="font-thin">Designs</span>
                 </a>
             </div>
 
