ensure games section bg-gray is full width

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -188,20 +188,22 @@
     </div>
 
     <% # games %>
-    <div class="bg-grey-50 container py-16 md:py-20" id="games">
-        <h2
-            class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            <span class="normal-case">iOS</span> Games</h2>
-        <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            Here are games I created which are available to play in the Apple App Store</h3>
+    <div class="bg-grey-50">
+        <div class="container py-16 md:py-20" id="games">
+            <h2
+                class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+                <span class="normal-case">iOS</span> Games</h2>
+            <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+                Here are games I created which are available to play in the Apple App Store</h3>
 
-        <div class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-1 gap-8 md:gap-10 pt-12">
-            <a 
-                href="https://apps.apple.com/us/app/squarecrusher/id1518515040" 
-                class="mx-auto md:mx-0 transition-all transform hover:scale-105"
-                target="_blank">
-                <%= image_pack_tag "portfolio-apple.jpeg", class: "shadow w-full", alt: "portfolio image" %>
-            </a>
+            <div class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-1 gap-8 md:gap-10 pt-12">
+                <a
+                    href="https://apps.apple.com/us/app/squarecrusher/id1518515040"
+                    class="mx-auto md:mx-0 transition-all transform hover:scale-105"
+                    target="_blank">
+                    <%= image_pack_tag "portfolio-apple.jpeg", class: "shadow w-full", alt: "portfolio image" %>
+                </a>
+            </div>
         </div>
     </div>
 
