--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -40,7 +40,7 @@
         <div class="container py-16 md:py-20 flex flex-col lg:flex-row items-center">
             <div class="w-full sm:w-3/4 lg:w-3/5 text-center lg:text-left">
                 <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase">
-                    Not your average developer.</h2>
+                    Not your average developer</h2>
                 <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
                     Technical and Creative</h4>
                 <p class="font-body text-grey-20 pt-6 leading-relaxed">
