finalize logo text for now (stacked in lg breakpoint)

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@ this.triggerNavItem(id)
     <div class="w-full z-50 top-0 py-3 sm:py-5 <%= @navigation_class %> ">
         <div class="container flex justify-between items-center">
             <div>
-                <a href="/" class="uppercase text-white text-xl sm:text-2xl lg:text-4xl">
+                <a href="/" class="uppercase text-white text-2xl sm:text-4xl">
                     <span class="font-black">Radler</span> <span class="font-thin">Designs</span>
                 </a>
             </div>
