--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -197,8 +197,8 @@
                 Here are games I created which are available to play in the Apple App Store</h3>
 
             <div class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-1 gap-8 md:gap-10 pt-12">
-                <a
-                    href="https://apps.apple.com/us/app/squarecrusher/id1518515040"
+                <a 
+                    href="https://apps.apple.com/us/app/squarecrusher/id1518515040" 
                     class="mx-auto md:mx-0 transition-all transform hover:scale-105"
                     target="_blank">
                     <%= image_pack_tag "portfolio-apple.jpeg", class: "shadow w-full", alt: "portfolio image" %>
@@ -211,9 +211,9 @@
     <div class="container py-16 md:py-20" id="work">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            My work experience</h2>
+            Work Experience</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            Here's what I did before freelancing</h3>
+            San Francisco Based Technology Companies</h3>
 
         <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
             <span class="absolute inset-y-0 left-2/5 ml-10 w-0.5 bg-grey-40 hidden md:block"></span>
@@ -222,7 +222,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "logo-spotify.svg", class: "w-32 h-auto", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-3 hidden md:block">
                             <span
@@ -238,16 +238,16 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">Apr
-                                    2015 - Mar 2018</span>
+                                <span class="font-body font-bold text-grey-40 block">
+                                    Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Frontend
-                                    Developer</span>
+                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                    Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">Lorem ipsum
-                                        dolor sit amet, consectetur adipiscing elit.
-                                        Vestibulum mattis felis vitae risus pulvinar
-                                        tincidunt. Nam ac venenatis enim.</span>
+                                    <span class="font-body text-black block">
+                                        Built and maintained Simulated Rides and Acceptance Testing platforms, allowing
+                                        Lyft to ensure it can scale safely for peak events and holidays.
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "logo-microsoft.svg", class: "w-32 h-auto", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-3 hidden md:block">
                             <span
@@ -274,16 +274,16 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">Mar 2018 - September
-                                    2019</span>
+                                <span class="font-body font-bold text-grey-40 block">
+                                    Sep 2015 - Mar 2017
+                                </span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Software
-                                    Engineer</span>
+                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering Manager</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">Lorem ipsum
-                                        dolor sit amet, consectetur adipiscing elit.
-                                        Vestibulum mattis felis vitae risus pulvinar
-                                        tincidunt. Nam ac venenatis enim.</span>
+                                    <span class="font-body text-black block">
+                                        Architect of Teespring Storefronts product, widely used by online influencers for 
+                                        mechandise sales on sites such as YouTube.
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "logo-fedex.svg", class: "w-32 h-auto", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-3 hidden md:block">
                             <span
@@ -310,16 +310,15 @@
                         <div class="mt-1 flex">
                             <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
                             <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">October 2019 - Feb
-                                    2021</span>
+                                <span class="font-body font-bold text-grey-40 block">May 2013 - Aug
+                                    2015</span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">DevOps
-                                    Engineer</span>
+                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                    Software Engineer</span>
                                 <div class="pt-2">
-                                    <span class="font-body text-black block">Lorem ipsum
-                                        dolor sit amet, consectetur adipiscing elit.
-                                        Vestibulum mattis felis vitae risus pulvinar
-                                        tincidunt. Nam ac venenatis enim.</span>
+                                    <span class="font-body text-black block">
+                                        Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile Application single-sign-on platform.
+                                    </span>
                                 </div>
                             </div>
                         </div>
