--- a/app/views/home/_blog.html.erb
+++ b/app/views/home/_blog.html.erb
@@ -2,9 +2,9 @@
     <div class="container py-16 md:py-20">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            I also like to write</h2>
+            Latest Blog Posts</h2>
         <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            Check out my latest posts!</h4>
+            Check out my most recent posts!</h4>
         <div
             class="w-full sm:w-3/4 lg:w-full mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6 xl:gap-10 pt-12">
             <% @posts.each do |post| %>
