--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -399,7 +399,7 @@
     <div class="container py-16 md:py-20" id="contact">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            Contact Ben</h2>
+            Contact Me</h2>
         <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             Have Any Questions?</h4>
         <div class="w-full sm:w-2/3 mx-auto pt-5 lg:pt-6 text-center">
