--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -208,183 +208,122 @@
     </div>
 
     <% # work %>
-    <div class="container py-16 md:py-20" id="work">
-        <h2
-            class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
-            Work Experience</h2>
-        <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            San Francisco Based Technology Companies</h3>
+    <div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-16 xl:px-16"
+        style="background-image:url(<%= asset_pack_path("media/images/experience-figure.svg") %>)" id="work">
+        <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
+            <h2
+                class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+                Work Experience</h2>
+            <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+                San Francisco Based Technology Companies</h3>
 
-        <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
-            <span class="absolute inset-y-0 left-2/5 ml-10 w-0.5 bg-grey-40 hidden md:block"></span>
+            <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
+                <span class="absolute inset-y-0 left-2/5 ml-10 w-0.5 bg-grey-40 hidden md:block"></span>
 
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
-                <div class="md:w-2/5">
-                    <div class="flex justify-center md:justify-start">
-                        <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16", alt: "company logo" %>
-                        </span>
-                        <div class="relative w-full ml-3 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+                    <div class="md:w-2/5">
+                        <div class="flex justify-center md:justify-start">
+                            <span class="flex-shrink-0">
+                                <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16", alt: "company logo" %>
+                            </span>
+                            <div class="relative w-full ml-3 hidden md:block">
+                                <span
+                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="md:w-3/5">
-                    <div class="flex md:pl-18 relative">
-                        <span
-                            class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
+                    <div class="md:w-3/5">
+                        <div class="flex md:pl-18 relative">
+                            <span
+                                class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
-                        <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
-                            <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">
-                                    Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
-                                <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
-                                    Software Engineer</span>
-                                <div class="pt-2">
-                                    <span class="font-body text-black block">
-                                        Built and maintained Simulated Rides and Acceptance Testing platforms, allowing
-                                        Lyft to ensure it can scale safely for peak events and holidays.
-                                    </span>
+                            <div class="mt-1 flex">
+                                <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                                <div class="md:pl-8 md:-mt-1">
+                                    <span class="font-body font-bold text-grey-40 block">
+                                        Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
+                                    <span
+                                        class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                        Software Engineer</span>
+                                    <div class="pt-2">
+                                        <span class="font-body text-black block">
+                                            Built and maintained Simulated Rides and Acceptance Testing platforms, allowing
+                                            Lyft to ensure it can scale safely for peak events and holidays.
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
-                <div class="md:w-2/5">
-                    <div class="flex justify-center md:justify-start">
-                        <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
-                        </span>
-                        <div class="relative w-full ml-3 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+                    <div class="md:w-2/5">
+                        <div class="flex justify-center md:justify-start">
+                            <span class="flex-shrink-0">
+                                <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
+                            </span>
+                            <div class="relative w-full ml-3 hidden md:block">
+                                <span
+                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="md:w-3/5">
-                    <div class="flex md:pl-18 relative">
-                        <span
-                            class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
+                    <div class="md:w-3/5">
+                        <div class="flex md:pl-18 relative">
+                            <span
+                                class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
-                        <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
-                            <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">
-                                    Sep 2015 - Mar 2017
-                                </span>
-                                <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering Manager</span>
-                                <div class="pt-2">
-                                    <span class="font-body text-black block">
-                                        Architect of Teespring Storefronts product, widely used by online influencers for 
-                                        mechandise sales on sites such as YouTube.
+                            <div class="mt-1 flex">
+                                <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                                <div class="md:pl-8 md:-mt-1">
+                                    <span class="font-body font-bold text-grey-40 block">
+                                        Sep 2015 - Mar 2017
                                     </span>
+                                    <span
+                                        class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering Manager</span>
+                                    <div class="pt-2">
+                                        <span class="font-body text-black block">
+                                            Architect of Teespring Storefronts product, widely used by online influencers for
+                                            mechandise sales on sites such as YouTube.
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
-                <div class="md:w-2/5">
-                    <div class="flex justify-center md:justify-start">
-                        <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto", alt: "company logo" %>
-                        </span>
-                        <div class="relative w-full ml-3 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="md:w-3/5">
-                    <div class="flex md:pl-18 relative">
-                        <span
-                            class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
-
-                        <div class="mt-1 flex">
-                            <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
-                            <div class="md:pl-8 md:-mt-1">
-                                <span class="font-body font-bold text-grey-40 block">May 2013 - Aug
-                                    2015</span>
+                <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+                    <div class="md:w-2/5">
+                        <div class="flex justify-center md:justify-start">
+                            <span class="flex-shrink-0">
+                                <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto", alt: "company logo" %>
+                            </span>
+                            <div class="relative w-full ml-3 hidden md:block">
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
-                                    Software Engineer</span>
-                                <div class="pt-2">
-                                    <span class="font-body text-black block">
-                                        Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile Application single-sign-on platform.
-                                    </span>
-                                </div>
+                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                    <div class="md:w-3/5">
+                        <div class="flex md:pl-18 relative">
+                            <span
+                                class="border-2 border-grey-40 rounded-full w-4 h-4 absolute left-8 top-1 bg-white hidden md:block"></span>
 
-    <% # statistics %>
-    <div class="bg-top bg-cover bg-no-repeat pb-16 md:py-16 lg:py-24"
-        style="background-image:url(<%= asset_pack_path("media/images/experience-figure.png") %>)" id="statistics">
-        <div class="container">
-            <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24 shadow">
-                <div class="grid grid-cols-2 xl:grid-cols-4 gap-5 md:gap-8 xl:gap-5">
-                    <div class="flex md:flex-row flex-col justify-center items-center text-center md:text-left">
-                        <div>
-                            <%= image_pack_tag "icon-project.svg", class: "mx-auto h-12 md:h-20 w-auto", alt: "icon project" %>
-                        </div>
-                        <div class="md:pl-5 md:pt-0 pt-5">
-                            <h1 class="font-body font-bold md:text-4xl text-2xl text-primary">
-                                12</h1>
-                            <h4
-                                class="font-header font-medium md:text-xl text-base text-grey-dark leading-loose">
-                                Finished Projects</h4>
-                        </div>
-                    </div>
-
-                    <div class="flex md:flex-row flex-col justify-center items-center text-center md:text-left">
-                        <div>
-                            <%= image_pack_tag "icon-award.svg", class: "mx-auto h-12 md:h-20 w-auto", alt: "icon award" %>
-                        </div>
-                        <div class="md:pl-5 md:pt-0 pt-5">
-                            <h1 class="font-body font-bold md:text-4xl text-2xl text-primary">
-                                3</h1>
-                            <h4
-                                class="font-header font-medium md:text-xl text-base text-grey-dark leading-loose">
-                                Awards Won</h4>
-                        </div>
-                    </div>
-
-                    <div
-                        class="flex md:flex-row flex-col justify-center items-center text-center md:text-left lg:mt-0 md:mt-10 mt-6">
-                        <div>
-                            <%= image_pack_tag "icon-happy.svg", class: "mx-auto h-12 md:h-20 w-auto", alt: "icon happy clients" %>
-                        </div>
-                        <div class="md:pl-5 md:pt-0 pt-5">
-                            <h1 class="font-body font-bold md:text-4xl text-2xl text-primary">
-                                8</h1>
-                            <h4
-                                class="font-header font-medium md:text-xl text-base text-grey-dark leading-loose">
-                                Happy Clients</h4>
-                        </div>
-                    </div>
-
-                    <div
-                        class="flex md:flex-row flex-col justify-center items-center text-center md:text-left lg:mt-0 md:mt-10 mt-6">
-                        <div>
-                            <%= image_pack_tag "icon-puzzle.svg", class: "mx-auto h-12 md:h-20 w-auto", alt: "icon puzzle" %>
-                        </div>
-                        <div class="md:pl-5 md:pt-0 pt-5">
-                            <h1 class="font-body font-bold md:text-4xl text-2xl text-primary">
-                                99</h1>
-                            <h4
-                                class="font-header font-medium md:text-xl text-base text-grey-dark leading-loose">
-                                Bugs Fixed</h4>
+                            <div class="mt-1 flex">
+                                <i class='bx bxs-right-arrow text-primary hidden md:block'></i>
+                                <div class="md:pl-8 md:-mt-1">
+                                    <span class="font-body font-bold text-grey-40 block">May 2013 - Aug
+                                        2015</span>
+                                    <span
+                                        class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                        Software Engineer</span>
+                                    <div class="pt-2">
+                                        <span class="font-body text-black block">
+                                            Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile Application single-sign-on platform.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
