--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -12,8 +12,8 @@
 
         <div class="container z-30 relative pt-20 sm:pt-56 lg:pt-64 pb-12 sm:pb-48 lg:pb-48">
             <div class="flex flex-col lg:flex-row justify-center items-center">
-                <div class="rounded-full border-8 border-primary shadow-xl">
-                    <%= image_pack_tag "blog-author.jpg", class: "h-48 sm:h-56 rounded-full", alt: "author" %>
+                <div class="rounded-full border-8 border-white shadow-xl">
+                    <%= image_pack_tag "blog-author-#{rand(1..3)}.jpg", class: "h-48 sm:h-56 rounded-full", alt: "author" %>
                 </div>
                 <div class="lg:pl-8 pt-8 sm:pt-10 lg:pt-0">
                     <h1
@@ -44,7 +44,7 @@
                 <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
                     Technical and Creative</h4>
                 <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                    I have over <%= Time.now.year - 2011 %> years of professional experience as a Software Engineer at prestigious,
+                    I have over <%= Time.now.year - 2011 %> years of professional experience as a <span class="font-black">Software Engineer</span> at prestigious,
                     successful companies in the San Francisco Bay Area.
                 </p>
                 <p class="font-body text-grey-20 pt-6 leading-relaxed">
@@ -283,7 +283,7 @@
                                         class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering Manager</span>
                                     <div class="pt-2">
                                         <span class="font-body text-black block">
-                                            Architect of Teespring Storefronts product, widely used by online influencers for
+                                            Architect of Teespring Storefronts product, widely used by online influencers for 
                                             mechandise sales on sites such as YouTube.
                                         </span>
                                     </div>
