--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -4,7 +4,7 @@
 <div>
     <% # hero %>
     <div class="bg-center bg-cover bg-no-repeat relative py-8"
-        style="background-image: url(<%= asset_pack_path("media/images/bg-hero-1.jpg") %>);">
+        style="background-image: url(<%= asset_pack_path("media/images/home/bg-hero.jpg") %>);">
         
         <div
             class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from to-hero-gradient-to">
@@ -13,7 +13,7 @@
         <div class="container z-30 relative pt-20 sm:pt-56 lg:pt-64 pb-12 sm:pb-48 lg:pb-48">
             <div class="flex flex-col lg:flex-row justify-center items-center">
                 <div class="rounded-full border-8 border-white shadow-xl">
-                    <%= image_pack_tag "blog-author-#{rand(1..3)}.jpg", class: "h-48 sm:h-56 rounded-full", alt: "author" %>
+                    <%= image_pack_tag "home/blog-author-#{rand(1..3)}.jpg", class: "h-48 sm:h-56 rounded-full", alt: "author" %>
                 </div>
                 <div class="lg:pl-8 pt-8 sm:pt-10 lg:pt-0">
                     <h1
@@ -209,7 +209,7 @@
 
     <% # work %>
     <div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-16 xl:px-16"
-        style="background-image:url(<%= asset_pack_path("media/images/experience-figure.svg") %>)" id="work">
+        style="background-image:url(<%= asset_pack_path("media/images/home/experience-figure.svg") %>)" id="work">
         <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
             <h2
                 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
