--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -224,11 +224,11 @@
                     <div class="md:w-2/5">
                         <div class="flex justify-center md:justify-start">
                             <span class="flex-shrink-0">
-                                <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16", alt: "company logo" %>
+                                <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16 relative -top-5", alt: "company logo" %>
                             </span>
-                            <div class="relative w-full ml-3 hidden md:block">
+                            <div class="relative w-full ml-6 hidden md:block">
                                 <span
-                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                             <span class="flex-shrink-0">
                                 <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
                             </span>
-                            <div class="relative w-full ml-3 hidden md:block">
+                            <div class="relative w-full ml-6 hidden md:block">
                                 <span
                                     class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
                             </div>
@@ -296,11 +296,11 @@
                     <div class="md:w-2/5">
                         <div class="flex justify-center md:justify-start">
                             <span class="flex-shrink-0">
-                                <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto", alt: "company logo" %>
+                                <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto relative -top-2", alt: "company logo" %>
                             </span>
-                            <div class="relative w-full ml-3 hidden md:block">
+                            <div class="relative w-full ml-6 hidden md:block">
                                 <span
-                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                                    class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
                             </div>
                         </div>
                     </div>
