add videos section

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,6 +24,7 @@ this.triggerNavItem(id)
 
                     <%= scrolling_desktop_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "videos",     path: "#videos",      request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "latest",     path: "#blog",       request_path: request.path) %>
                     <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
@@ -54,6 +55,7 @@ this.triggerNavItem(id)
 
                 <%= scrolling_mobile_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
+                <%= scrolling_mobile_navigation_link(name: "videos",     path: "#videos",      request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "latest",     path: "#blog",       request_path: request.path) %>
                 <%= scrolling_mobile_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
