--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -120,7 +120,7 @@
     </div>
 
     <% # expertise %>
-    <div class="container py-16 md:py-20" id="services">
+    <div class="container py-16 md:py-20" id="expertise">
         <h2
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Expertise</h2>
@@ -203,6 +203,55 @@
                     target="_blank">
                     <%= image_pack_tag "portfolio-apple.jpeg", class: "shadow w-full", alt: "portfolio image" %>
                 </a>
+            </div>
+        </div>
+    </div>
+
+    <% # videos %>
+    <div class="container py-16 md:py-20" id="videos">
+        <h2
+            class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+            Videos</h2>
+        <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
+            A Sample of Short Films from
+            <a href="https://youtube/com/benradler" target="_blank" class="text-primary">my YouTube Channel</a>
+        </h3>
+
+        <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="text-center">
+                    <h3
+                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
+                        BMW Advertisement</h3>
+                    <p class="text-sm md:text-base text-grey pt-4 px-4">
+                        Mock advertisement for <span class="font-black">The Ultimate Driving Machine</span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="text-center">
+                    <h3
+                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
+                        The Storm</h3>
+                    <p class="text-sm md:text-base text-grey pt-4 px-4">
+                        A Short, <span class="font-black">Super-Slow-Motion</span> Cinematic film about Snow
+                    </p>
+                </div>
+            </div>
+
+            <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Mdk78fR0ihw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="text-center">
+                    <h3
+                        class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
+                        Magician Ramana</h3>
+                    <p class="text-sm md:text-base text-grey pt-4 px-4">
+                        My most-viewed video, at nearly <span class="font-black">16 million views</span>. Featuring famous Dutch Magician Ramana.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
