--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,5 @@
-<% set_meta_tags title: 'Home | Hire Me',
-  description: 'Home | Hire Ben Radler for software engineering. Ruby, Rails, Python, ReactJS, Javascript' %>
+<% set_meta_tags title: 'Home - Software Engineer and Filmmaker',
+  description: 'Home - Hire Ben Radler for software engineering. Ruby, Rails, Python, ReactJS, Javascript' %>
 
 <div>
     <%= render partial: "hero" %>
