--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,10 +18,10 @@ html[lang="en"]
     meta name='MobileOptimized' content='320'
 
     - # facebook open graph
-    meta[property="og:title" content="Homepage | Atom Template"]
+    meta[property="og:title" content="Homepage | benradler.com"]
     meta[property="og:locale" content="en_US"]
     meta[property="og:url" content="//"]
-    meta[property="og:site_name" content="Atom Template"]
+    meta[property="og:site_name" content="benradler.com"]
     meta[property="og:image" content="//assets/social.jpg"]
 
     - # twitter
