update image path

--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-center bg-cover bg-no-repeat relative py-16 lg:py-24 bg-primary"
-    style="background-image: url(<%= asset_pack_path("media/images/bg-cta.jpg") %>);">
+    style="background-image: url(<%= asset_pack_path("media/images/home/bg-cta.jpg") %>);">
     <div
         class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from to-cta-gradient-to">
     </div>
