--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -32,7 +32,7 @@
 
         <div class="w-full sm:w-3/4 lg:w-2/5 pl-0 lg:pl-12 pt-10 lg:pt-0">
             <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center lg:text-left">
-                Weaponry</h4>
+                My Toolkit</h4>
             <div class="my-5">
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bxl-javascript text-5xl text-primary mr-5"></i>
