--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -6,7 +6,7 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-1 gap-6 md:gap-10 pt-10 md:pt-12">
         <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
 
                 Sorry, your browser doesn't support embedded videos.
