increased spacing for work experience in small view

--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+            <div class="flex flex-col md:flex-row text-center md:text-left mt-24 md:mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+            <div class="flex flex-col md:flex-row text-center md:text-left mt-24 md:mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
