--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,7 +29,7 @@ html[lang="en"]
     meta[name="twitter:site" content="@tailwindmade"]
 
     link[rel="canonical" href="//"]
-    link[rel="icon" type="image/png" href="/assets/favicon.png"]
+    link[rel="icon" type="image/png" href="#{asset_pack_path("media/images/layout/favicon.png")}"]
     meta[name="theme-color" content="#5540af"]
 
     - # fonts
