update twitter site link meta tag

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,7 +26,7 @@ html[lang="en"]
 
     - # twitter
     meta[name="twitter:card" content="summary_large_image"]
-    meta[name="twitter:site" content="@tailwindmade"]
+    meta[name="twitter:site" content="@benradler"]
 
     link[rel="canonical" href="//"]
     link[rel="icon" type="image/png" href="#{asset_pack_path("media/images/layout/favicon.png")}"]
