--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html[lang="en"]
     meta[property="og:locale" content="en_US"]
     meta[property="og:url" content="//"]
     meta[property="og:site_name" content="benradler.com"]
-    meta[property="og:image" content="#{asset_pack_path("media/images/layout/social.png")}"]
+    meta[property="og:image" content="#{asset_pack_path("media/images/layout/social.jpg")}"]
 
     - # twitter
     meta[name="twitter:card" content="summary_large_image"]
