--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -8,7 +8,7 @@
         <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.</p>
     </div>
 
-    <%= render partial: "shared/contact_me", locals: { form_classes: "mx-auto" } %>
+    <%= render partial: "shared/contact_me", locals: { form_classes: "mx-auto", request_route: root_path } %>
 </div>
 <div class="bg-center bg-cover bg-no-repeat h-72 sm:h-64 md:h-72 lg:h-96"
         style="background-image: url(<%= asset_pack_path("media/images/home/map.jpg") %>);"></div>
